добавлен запрос create_schedule + тест